--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <h3>Naped</h3>
             <p>O Naped é um projeto pessoal onde compartilho informações sobre o mundo nerd.</p>
             <span>
-              <a href="https://naped.vercel.app/" rel="noopener" target="_blank" class="button">
+              <a href="https://zhugungun.github.io/My-work/" rel="noopener" target="_blank" class="button">
                 <button><span class="iconify" data-inline="false" data-icon="bx:bx-link"></span>&nbsp;Website</button>
               </a>
             </span>
